# tauv-mono

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  Makefile  README.md  TAUV-ROS-Packages.code-workspace  aliases.sh  frames.gv  lastyaml  requirements.txt
src/tauv_common/: CMakeLists.txt  setup.py
src/tauv_common/include/units/: units.h
src/tauv_common/scripts/: accumulator  bucket_to_tf  controller  debluer  detector_bucket  log_detections  logger  mpc_planner  pid_planner  retare_sub_position  shape_detector  spkf_dynamics_parameter_estimator  teleop_planner  thruster_allocator  tuning_planner  watchdogs
src/tauv_common/srv/: RetearSubPosition.srv
src/tauv_config/albatross_description/: package.xml
src/tauv_gui/: CMakeLists.txt  package.xml
src/tauv_gui/launch/: map_visualizer.launch
src/tauv_gui/scripts/: map_visualizer  publish_sonar_map
src/tauv_gui/yaml/: map_visualizer.yaml
src/tauv_mission/: CMakeLists.txt  README.md  package.xml
src/tauv_mission/yaml/: transdec_23.yaml
src/tauv_msgs/: CMakeLists.txt  package.xml
src/tauv_msgs/msg/: ControllerCommand.msg  DynamicsParameterConfigUpdate.msg  DynamicsParametersEstimate.msg  FeatureDetections.msg  GateDetection.msg  PIDDebug.msg  Servos.msg  TrajPoint.msg
src/tauv_msgs/srv/: FeatureDetectionsSync.srv  GetCameraInfo.srv  GetVoltage.srv  MapFind.srv  MapFindOne.srv  TuneController.srv
src/tauv_sim/: CMakeLists.txt
src/tauv_sim/launch/: kingfisher_albatross_umd_sim.launch  kingfisher_base.launch  kingfisher_transdec_sim.launch
src/tauv_sim/scripts/: f1c_to_mono16
src/tauv_sim_gazebo_plugins/: CMakeLists.txt  package.xml
src/tauv_sim_gazebo_plugins/src/: thruster_plugin.cpp
src/tauv_sim_gazebo_plugins/urdf/: navigation_state_plugin.xacro  thruster_plugin.xacro  utils.xacro
src/tauv_sim_worlds/: CMakeLists.txt  package.xml
src/tauv_sim_worlds/launch/: irvine.launch  kinect_camera.launch  transdec.launch  umd.launch
src/tauv_sim_worlds/worlds/: kinect_camera.world
src/tauv_vehicle/: CMakeLists.txt  README.md  package.xml
src/tauv_vehicle/scripts/: actuators  arduino  depth_sensor  oakd_raw  pinger_pf
tauv_common/: CMakeLists.txt  README.md  frames.gv  package.xml  setup.py
tauv_common/cmake/: cppcheck.cmake  unit-test.cmake
tauv_common/config/manta/: imu_autolevel_matrix.yaml  imu_axis_map.yaml
tauv_common/launch/control_modes/: joystick_mode.launch
tauv_common/launch/controllers/: cascaded_controller.launch  controllers.launch  keyboard_controller.launch
tauv_common/launch/gnc/: gnc.launch
tauv_common/launch/imu_calibrator/: imu_calibrator.launch
tauv_common/launch/multimaster/: multimaster.launch
tauv_common/launch/state_estimation/: state_estimation.launch
tauv_common/launch/teleop/: teleop.launch
tauv_common/launch/thruster_manager/: thruster_manager.launch
tauv_common/launch/thruster_managers/: thruster_manager.launch
tauv_common/launch/vision/: detector_bucket.launch  vision.launch
tauv_common/scripts/: acceleration_controller  arming_server  attitude_controller  cascaded_controller  control_aggregator  detect_gate  detector_bucket  dummy_detector  joystick_mode  keyboard_controller  keyboard_planner  mpc_traj_follower  pid_control_wrapper  pose_graph  position_controller  state_estimation  state_estimation_visualizer  teleop  teleop_planner  thruster_allocator.py  twist_transformer  user_control.py  velocity_controller
tauv_common/src/attitude_controllers/: controller.py
tauv_common/src/constructors/: Bool.h  Point.h  Pose.h  README.md  TwistStamped.h  Vector3.h
tauv_common/src/control_modes/: joystick_mode.py
tauv_common/src/controllers/: README.md  __init__.py  cascaded_controller.py  control_aggregator.py  controller.py  keyboard_controller.py  user_controller.py
tauv_common/src/dynamics/: dynamics.py
tauv_common/src/imu_calibrator/: .ImuCalibrator.cpp.swp  .ImuCalibrator.h.swp  CMakeLists.txt  ImuCalibrator.cpp  ImuCalibrator.h
tauv_common/src/mission_planner/: __init__.py  mission_planner.py
tauv_common/src/motion/: CMakeLists.txt  motion_utilities.cpp  motion_utilities.h
tauv_common/src/motionlib/: README.md  __init__.py  motion_utils.py  trajectories.py
tauv_common/src/planners/: planners.yaml
tauv_common/src/state_estimation/: __init__.py  depth_odometry.py  frames.gv  kd_tree.py  pose_graph.py  state_estimation.py  twist_transformer.py
tauv_common/src/tauv_reconfig/: __init__.py  reconfig_client.py  reconfig_server.py
tauv_common/src/tauv_util/: types.py
tauv_common/src/teleop/: teleop.py
tauv_common/src/thruster_managers/: README.md  __init__.py  arming_server.py  thruster_allocator.py  thruster_manager.py
tauv_common/src/vision/: README.md  __init__.py
tauv_common/srv/: RegisterMeasurement.srv  RegisterObjectDetection.srv
tauv_common/tests/motion/: .tags  CMakeLists.txt  motion_utilities_tests.cpp
tauv_ext_pkgs/tauv_pid/: CMakeLists.txt  package.xml
tauv_ext_pkgs/tauv_pid/src/: pid.cpp
tauv_msgs/: CMakeLists.txt  package.xml
tauv_msgs/msg/: BucketDetection.msg  BucketList.msg  CascadedPidSelection.msg  ControllerInput.msg  ControllerList.msg  ControllerStatus.msg  FluidDepth.msg  JoyMode.msg  MpcRefTraj.msg  ObjectDetection.msg  PidVals.msg  SonarPulse.msg  TargetState.msg
tauv_msgs/srv/: .tmp  GetTraj.srv  JoyMode.srv  SetCascadedPidSelection.srv  SetController.srv  SetControllerMode.srv  TuneInertial.srv  TunePid.srv  cascaded_pid_selection.msg
tauv_vehicle/: CMakeLists.txt  README.md  package.xml  setup.py
tauv_vehicle/cmake/: ros-node.cmake
tauv_vehicle/launch/: albatross_vehicle.launch
tauv_vehicle/launch/depth/: depth-sensor.launch
tauv_vehicle/launch/frames/: frames.gv  static_tfs.launch
tauv_vehicle/launch/inertial/: phidgets-imu.launch
tauv_vehicle/launch/joints/: default_joint_publisher.launch
tauv_vehicle/scripts/: actuators  depth_sensor  sonar
tauv_vehicle/src/depth/: .depth_sensor.py.swp  depth_sensor.py
tauv_vehicle/src/depth_sensor/: depth_sensor.py
tauv_vehicle/src/sonar/: sonar.py
tauv_vehicle/src/thrusters/: actuators.py  maestro.py
(+2073 files in other folders)
