<?xml version="1.0"?>
<package format="2">
    <name>tauv_gui</name>
    <version>0.0.0</version>
    <description>The tauv_gui package</description>

    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <!-- Example:  -->
    <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
    <maintainer email="theo@chemel.net">Theo Chemel</maintainer>


    <!-- One license tag required, multiple allowed, one license per tag -->
    <!-- Commonly used license strings: -->
    <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>tauv_config</depend>
    <depend>tauv_common</depend>
    <depend>tauv_vehicle</depend>
    <depend>multimaster_fkie</depend>
    <depend>message_generation</depend>
    <depend>tf</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>std_srvs</depend>
    <depend>std_msgs</depend>
    <depend>roscpp</depend>
    <depend>message_runtime</depend>
    <depend>rospy</depend>
    <depend>python-yaml</depend>
    <depend>message_filters</depend>
    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>
