<?xml version="1.0"?>
<package format="2">
    <name>tauv_sim_gazebo_plugins</name>
    <version>0.1.0</version>
    <description>Gazebo plugins for the TAUV simulator</description>

    <maintainer email="theo@chemel.net">Theo Chemel</maintainer>

    <author email="theo@chemel.net">Theo Chemel</author>

    <license>Apache-2.0</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>gazebo_dev</depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>tauv_msgs</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>
</package>

