<?xml version="1.0"?>
<package format="2">
    <name>tauv_sim_worlds</name>
    <version>0.1.0</version>
    <description>Gazebo worlds and models for the TAUV simulator</description>

    <maintainer email="theo@chemel.net">Theo Chemel</maintainer>

    <author email="theo@chemel.net">Theo Chemel</author>

    <license>Apache-2.0</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>gazebo_ros</depend>

    <export>
        <gazebo_ros gazebo_media_path="${prefix}"
                    gazebo_model_path="${prefix}/models" />
    </export>
</package>