<?xml version="1.0"?>
<package format="2">
  <name>tauv_vehicle</name>
  <version>0.0.0</version>
  <description>The tauv_vehicle package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="tom@todo.todo">tom</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>tauv_common</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>image_transport</depend>
  <depend>sensor_msgs</depend>
  <depend>zed-ros-wrapper</depend>
  <depend>gscam</depend>
  <depend>image_proc</depend>
  <depend>tf</depend>
  <depend>phidgets_imu</depend>
  <depend>imu_filter_madgwick</depend>
  <depend>imu_transformer</depend>
  <depend>tauv_msgs</depend>
  <depend>libi2c-dev</depend>
  <depend>python-smbus</depend>
  <depend>std_srvs</depend>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
