<?xml version="1.0"?>
<package format="2">
  <name>tauv_pid</name>
  <version>0.0.27</version>
  <description>TAUV variant of pid controller node.</description>

  <!-- This variant originally created by Andy Zelenak, updated by Tom Scherlis -->
  <maintainer email="tscherli@andrew.cmu.edu">Tom Scherlis</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/pid</url>

  <author email="andyz@utexas.edu">Andy Zelenak</author>[
  <author>Paul Bouchier</author>
  <author email="tscherli@andrew.cmu.edu">Tom Scherlis</author>

  <!-- Use buildtool_depend for build tool packages: -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- Use build_depend for packages you need at compile time: -->
  <depend>message_runtime</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  
</package>
